[gd_scene load_steps=12 format=3 uid="uid://cc1m2a1obsyn4"]

[ext_resource type="Script" path="res://player/character.gd" id="1_0t4e8"]
[ext_resource type="Script" path="res://player/Camera.gd" id="2_c84n2"]
[ext_resource type="Script" path="res://player/WeaponManager.gd" id="2_hcpux"]
[ext_resource type="PackedScene" uid="uid://3mij3cjhkwsm" path="res://addons/fpc/reticles/reticle_1.tscn" id="2_uuexm"]
[ext_resource type="Script" path="res://addons/fpc/debug.gd" id="3_x1wcc"]
[ext_resource type="Resource" uid="uid://ckl47hwbkdvaw" path="res://weapons/weapon_resources/ak74m.tres" id="4_pt35r"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uy03j"]

[sub_resource type="Animation" id="Animation_gh776"]
resource_name = "RESET"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_lrqmv"]
resource_name = "headbob"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.05, -0.05, 0), Vector3(0, 0, 0), Vector3(0.05, -0.05, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o0unb"]
_data = {
"RESET": SubResource("Animation_gh776"),
"headbob": SubResource("Animation_lrqmv")
}

[sub_resource type="Theme" id="Theme_wdf0f"]
MarginContainer/constants/margin_bottom = 10
MarginContainer/constants/margin_left = 10
MarginContainer/constants/margin_right = 10
MarginContainer/constants/margin_top = 10

[node name="Character" type="CharacterBody3D" node_paths=PackedStringArray("HEAD", "CAMERA", "CAMERA_ANIMATION", "WEAPON_MANAGER")]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_0t4e8")
base_speed = 4.0
sprint_speed = 8.0
crouch_speed = 3.0
jump_velocity = 5.0
HEAD = NodePath("Head")
CAMERA = NodePath("Head/Camera")
CAMERA_ANIMATION = NodePath("Head/camera_animation")
WEAPON_MANAGER = NodePath("Head/Camera/WeaponManager")
CROUCH = "crouch"
SPRINT = "sprint"

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_uy03j")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera" type="Camera3D" parent="Head"]
unique_name_in_owner = true
cull_mask = 3
script = ExtResource("2_c84n2")

[node name="InteractRay" type="RayCast3D" parent="Head/Camera"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -5)

[node name="WeaponManager" type="Node3D" parent="Head/Camera" node_paths=PackedStringArray("player_camera")]
script = ExtResource("2_hcpux")
player_camera = NodePath("..")
starting_weapons = Array[Resource("res://weapons/weapon_resources/weapon_resource.gd")]([ExtResource("4_pt35r")])
ammo_reserve_current = 40

[node name="FPSRig" type="Node3D" parent="Head/Camera"]
unique_name_in_owner = true

[node name="camera_animation" type="AnimationPlayer" parent="Head"]
libraries = {
"": SubResource("AnimationLibrary_o0unb")
}
blend_times = [&"headbob", &"RESET", 0.5, &"RESET", &"headbob", 0.5, &"RESET", &"RESET", 0.5]

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle_1" parent="UserInterface" node_paths=PackedStringArray("reticle_lines", "character") instance=ExtResource("2_uuexm")]
layout_mode = 1
reticle_lines = [NodePath("top"), NodePath("left"), NodePath("right"), NodePath("bottom")]
character = NodePath("../..")

[node name="DebugPanel" type="PanelContainer" parent="UserInterface"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 453.0
offset_bottom = 50.0
theme = SubResource("Theme_wdf0f")
script = ExtResource("3_x1wcc")

[node name="MarginContainer" type="MarginContainer" parent="UserInterface/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/DebugPanel/MarginContainer"]
layout_mode = 2

[editable path="UserInterface/Reticle_1"]
